chore: 添加基础配置及 Spring Boot 相关配置

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ name=spring-boot-example
 group=me.nibo.springboot
 description=Spring Boot example
 
+ALIYUN_MAVEN_REPO_URL=https://maven.aliyun.com/repository/central
+# JDK 版本依赖
+VER_JAVA=11
+# Spring Boot 版本
+VER_SPRING_BOOT=2.3.5.RELEASE
