--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ ALIYUN_MAVEN_REPO_URL=https://maven.aliyun.com/repository/central
 VER_JAVA=11
 # Spring Boot 版本
 VER_SPRING_BOOT=2.3.5.RELEASE
+# Lombok 版本
+VER_LOMBOK=1.18.16
