--- a/spring-boot-jpa/src/main/resources/application.yaml
+++ b/spring-boot-jpa/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/jpa?useSSL=false&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/jpa?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
     username: root
     password: 123456
   jpa:
